--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         </nav>
         <button class="bg-gray-100 w-36 rounded-md hover:bg-gray-200" >
-            <span > <p>Geeks &#8669;</p></span>
+            <span > <p>Geek &#8669;</p></span>
         </button>
     </header>
     <div class="flex gap-20  p-15 flex wrap ">
